--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "https-browserify": "^1.0.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "ts-loader": "^9.3.0",
     "tweetnacl": "^1.0.3",
+    "typescript": "^4.7.2",
     "url": "^0.11.0",
     "webpack": "^5.72.1"
   },
