--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
   "scripts": {
-    "build": "webpack build --config ./webpack.config.js"
+    "build": "webpack build --config ./webpack.config.js",
+    "analyzer": "webpack build --config ./webpack.analyzer.config.js"
   },
   "dependencies": {
-    "@babel/core": "^7.18.2",
-    "@babel/preset-env": "^7.17.12",
     "@orca-so/sdk": "^1.2.24",
     "@solana/spl-token": "^0.2.0",
-    "@solana/web3.js": "^1.42.0",
-    "@zclubweb3/zclub-solana": "^1.1.1",
+    "@solana/web3.js": "^1.44.0",
+    "@zclubweb3/zclub-solana": "^1.2.1",
     "assert": "^2.0.0",
-    "babel-loader": "^8.2.5",
     "bip39": "^3.0.4",
     "bs58": "^5.0.0",
     "buffer": "^6.0.3",
     "decimal.js": "^10.3.1",
     "ed25519-hd-key": "^1.2.0",
-    "html-webpack-plugin": "^5.5.0",
     "https-browserify": "^1.0.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "ts-loader": "^9.3.0",
     "tweetnacl": "^1.0.3",
-    "typescript": "^4.7.2",
-    "url": "^0.11.0",
-    "webpack": "^5.72.1"
+    "url": "^0.11.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.17.12",
+    "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^11.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.7.2",
+    "webpack": "^5.72.1",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2"
   }
 }
